--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,9 @@ baseurl: '' #'/feeling-responsive'
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-# urlimg: 'https://phlow.github.io/feeling-responsive/images/'
-urlimg: 'images/'
+urlimg: 'https://phlow.github.io/feeling-responsive/images/'
+#urlimg: 'https://thequotablewalkingdead.github.io/blog/images/'
+#urlimg: 'images/'
 
 # Logo size is 600x80 pixels
 logo: "logo.png"
