--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author: thequotablewalkingdead
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
 url: 'https://thequotablewalkingdead.github.io'
-baseurl: '' #'/feeling-responsive'
+baseurl: '/' #'/feeling-responsive'
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
@@ -38,8 +38,8 @@ baseurl: '' #'/feeling-responsive'
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://phlow.github.io/feeling-responsive/images/'
-#urlimg: 'https://thequotablewalkingdead.github.io/blog/images/'
+#urlimg: 'https://phlow.github.io/feeling-responsive/images/'
+urlimg: 'https://thequotablewalkingdead.github.io/images/'
 #urlimg: 'images/'
 
 # Logo size is 600x80 pixels
