--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,10 +5,10 @@
 # 3. Change default post/page authors in config.yml
 #
 # Resource › http://blog.sorryapp.com/blogging-with-jekyll/2014/02/06/adding-authors-to-your-jekyll-site.html
-phlow: # replace this with your info
-  name: "Phlow"
+thequotablewalkingdead: # replace this with your info
+  name: "thequotablewalkingdead"
   siterole: "webmaster, developer, copywriter, designer"
-  uri: http://phlow.de/
+  uri: http://thequotablewalkingdead.com
   email:
-  twitter: "@phlow"
+  twitter: "@thequotablewalkingdead"
 # you can add more authors here
