--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -62,6 +62,14 @@
 - title: Blog
   url: "/blog/"
   side: left
+
+- title: Gear
+  url: "/info/"
+  side: left
+
+- title: Junk
+  url: "/junk/"
+  side: left  
   # dropdown:
   # - title: "Blog Archive"
   #   url: "/blog/archive/"
