more changes to footer

--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,7 @@ gems:
     - jekyll-gist
     - jekyll-paginate
     - jekyll-paginate-multiple
+    - jekyll-sitemap
 
 
 #       ____              _             __  _
