--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,32 +1,32 @@
-- name: GitHub
-  url: http://github.com/phlow
-  class: icon-github
-  title: Code und mehr...
+# - name: GitHub
+#   url: http://github.com/phlow
+#   class: icon-github
+#   title: Code und mehr...
 
-- name: YouTube
-  url: http://www.youtube.com/PhlowMedia
-  class: icon-youtube
-  title: "Videos, Video-Anleitungen und Filme von Phlow auf YouTube"
+# - name: YouTube
+#   url: http://www.youtube.com/PhlowMedia
+#   class: icon-youtube
+#   title: "Videos, Video-Anleitungen und Filme von Phlow auf YouTube"
 
 - name: Twitter
-  url: http://twitter.com/phlow
+  url: http://twitter.com/thequotablewd
   class: icon-twitter
   title: "Immer das Neuste von Phlow gibt es auf Twitter"
 
-- name: Mixcloud
-  url: http://www.mixcloud.com/phlow/
-  class: icon-cloud
-  title: "Mixe, was sonst?"
+# - name: Mixcloud
+#   url: http://www.mixcloud.com/phlow/
+#   class: icon-cloud
+#   title: "Mixe, was sonst?"
 
-- name: Phlow YouTube Google+
-  url: https://plus.google.com/u/0/+Phlow
-  class: icon-googleplus
-  title: "YouTube Google+"
+# - name: Phlow YouTube Google+
+#   url: https://plus.google.com/u/0/+Phlow
+#   class: icon-googleplus
+#   title: "YouTube Google+"
 
-# - name: Facebook
-#   url: http://www.facebook.com/
-#   class: icon-facebook
-#   title: ""
+- name: Facebook
+  url: http://www.facebook.com/thequotablewalkingdead/
+  class: icon-facebook
+  title: ""
 
 # - name: Soundcloud
 #   url: http://soundcloud.com/
@@ -38,10 +38,15 @@
 #   class: icon-instagram
 #   title: ""
 
-# - name: Pinterest
-#   url: http://www.pinterest.com/
-#   class: icon-pinterest
-#   title: ""
+- name: Pinterest
+  url: http://www.pinterest.com/rickgrimey/the-quotable-walking-dead/
+  class: icon-pinterest
+  title: ""
+
+- name: Tumblr
+  url: http://www.tumblr.com/blog/thequotablewalkingdead
+  class: icon-tumblr
+  title: ""
 
 # - name: Xing
 #   url: https://www.xing.com/profile/
