Updated navigation and other thangs

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -64,11 +64,11 @@
   side: left
 
 - title: Gear
-  url: "/info/"
+  url: "/gear/"
   side: left
 
 - title: Thangs
-  url: "/junk/"
+  url: "/info/"
   side: left  
   # dropdown:
   # - title: "Blog Archive"
