--- a/_config.yml
+++ b/_config.yml
@@ -61,16 +61,16 @@ gems:
 #   /_/    \__,_/\__, /_/_/ /_/\__,_/\__/_/\____/_/ /_/
 #               /____/
 #
-paginate: 5                      # Paginates all X entries
-paginate_path: "blog/page:num"   # Pagination path › Important for blog page in /blog/ to work
+# paginate: 5                      # Paginates all X entries
+# paginate_path: "blog/page:num"   # Pagination path › Important for blog page in /blog/ to work
 
-# paginate_multiple:
-#   - paginate: 10
-#     paginate_path: '/blog/page:num/'
-#     sub_dir: '/en'
-#   - paginate: 10
-#     paginate_path: '/blog/de/page:num/'
-#     sub_dir: '/de'
+paginate_multiple:
+  - paginate: 5
+    paginate_path: '/blog/page:num/'
+    sub_dir: '/main'
+  # - paginate: 5
+  #   paginate_path: '/blog/main/page:num/'
+  #   sub_dir: '/main'
 
 
 # Theme works best with Kramdown (using the table of contents function)
@@ -122,7 +122,7 @@ defaults:
       show_meta: false 	# Hide metadata for all pages
       # sidebar:    		# Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: phlow     # Default author for pages
+      author: thequotablewalkingdead     # Default author for pages
   -
     scope:
       path: ''
@@ -131,7 +131,7 @@ defaults:
       show_meta: true   # Show metadata for all posts
       # sidebar:        # Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: phlow     # Default author for posts
+      author: thequotablewalkingdead     # Default author for posts
 
 
 
@@ -198,9 +198,9 @@ msapplication_tilecolor:                '#fabb00'
 #    / __/ / /_/ / /__/  __/ /_/ / /_/ / /_/ / ,<
 #   /_/    \__,_/\___/\___/_.___/\____/\____/_/|_|      Facebook-Optimization › http://j.mp/fb_optimize
 
-og_image:                           'http://images.phlow.de/phlow/phlow_de-logo-512x.png'
-og_locale:                          'en_EN'
-og_type:                            'website'
+# og_image:                           'http://images.phlow.de/phlow/phlow_de-logo-512x.png'
+# og_locale:                          'en_EN'
+# og_type:                            'website'
 
 
 #      _____            _       __   __  ___         ___
@@ -212,9 +212,9 @@ og_type:                            'website'
 #  Open _data/socialmedia.yml to adjust the left and right topbar navigation
 #
 
-socialmedia:
-    twitter: phlow
-    facebook: phlow.media
+# socialmedia:
+#     twitter: phlow
+#     facebook: phlow.media
 
 
 #        ____  _
@@ -226,7 +226,7 @@ socialmedia:
 #
 # used in _includes/comments
 
-disqus_shortname: feelingresponsive
+# disqus_shortname: feelingresponsive
 
 
 #      _____
