getting things working

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -68,7 +68,7 @@
   side: left
 
 - title: Thangs
-  url: "/info/"
+  url: "/blog/thangs/"
   side: left  
   # dropdown:
   # - title: "Blog Archive"
