--- a/_config.yml
+++ b/_config.yml
@@ -66,11 +66,11 @@ gems:
 
 paginate_multiple:
   - paginate: 5
-    paginate_path: '/blog/page:num/'
-    sub_dir: '/main'
+    paginate_path: 'blog/thangs/page:num/'
+    sub_dir: '/thangs'
   # - paginate: 5
-  #   paginate_path: '/blog/main/page:num/'
-  #   sub_dir: '/main'
+  #   paginate_path: 'blog/page:num/'
+  #   sub_dir: '/main'    
 
 
 # Theme works best with Kramdown (using the table of contents function)
