--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author: thequotablewalkingdead
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url:     '' #https://thequotablewalkingdead.github.io'
+url:     'http://www.thequotablewalkingdead.com' #https://thequotablewalkingdead.github.io'
 baseurl: '' #'/feeling-responsive'
 
 # This is for the editing function in _/includes/improve_content
