--- a/_data/language.yml
+++ b/_data/language.yml
@@ -14,6 +14,7 @@ previous_posts: "Previous Posts"
 read: "Read"
 read_more: "Read More&nbsp;›"
 if_you_are_not_redirected_automatically: "If you are not redirected automatically,"
+loading_web_site: "We are loading the site you requested"
 click_here: "click here"
 next_post_in: "Next Post in"
 previous_post_in: "Previous Post in"
